--- a/gallary.html
+++ b/gallary.html
@@ -178,7 +178,9 @@
             <div class="gallery col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h1 class="gallery-title">Dharmik Furniture</h1>
             </div>
-
+            <hr>
+            <h2 align="center" style="color: red;"> ⚠️"More Furniture images Uploading soon!"</h2>
+            <br>
             <div align="center">
                 <button class="btn btn-default filter-button" data-filter="all">All</button>
                 <button class="btn btn-default filter-button" data-filter="home">Home</button>
