--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
                <div class="col-md-6">
                   <div class="container_main" align="center">
-                     <img src="images/prakash.png" alt="Avatar" class="image"
+                     <img src="images/prakash.jpeg" alt="Avatar" class="image"
                         style="width: 400px; height: 400px; border-radius: 50%; object-fit: cover;">
                      <!-- <div class="overlay">
                       <a href="#" class="icon" title="User Profile">
