--- a/shop.html
+++ b/shop.html
@@ -112,7 +112,7 @@
 
                <div class="col-md-4">
                   <div class="container_main" align="center">
-                     <img src="images/mahesh.jpg" alt="Prakash Mistry" class="image"
+                     <img src="images/prakash.jpeg" alt="Prakash Mistry" class="image"
                         style="width: 300px; height: 300px; border-radius: 50%; object-fit: cover;">
                   </div>
                   <h3 align="center" class="temper_text">Prakash Mistry | Ahmedabad</h3>
@@ -125,7 +125,7 @@
 
                <div class="col-md-4">
                   <div class="container_main" align="center">
-                     <img src="images/mahesh.jpg" alt="Jiten Mistry" class="image"
+                     <img src="images/jiten.png" alt="Jiten Mistry" class="image"
                         style="width: 300px; height: 300px; border-radius: 50%; object-fit: cover;">
                   </div>
                   <h3 align="center" class="temper_text">Jiten Mistry | Anand</h3>
