--- a/index.html
+++ b/index.html
@@ -423,10 +423,7 @@
                   </div>
                   <h3 align="center" class="temper_text">Mahesh Mistry | KHAMBHAt</h3>
                   <p class="dololr_text">
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                     cillum dolore eu fugiat nulla pariatur.
+                    Mahesh Mistry is the backbone of Dharmik Furniture in Khambhat and the surrounding areas. With years of experience and a passion for quality craftsmanship, Mahesh ensures that every piece of furniture meets the highest standards. His expertise lies in creating custom-made furniture that perfectly fits the needs and style preferences of his clients. Whether it’s a new kitchen setup or a unique piece for the living room, Mahesh’s attention to detail and dedication to customer satisfaction make him a trusted name in the region.
                   </p>
                </div>
 
@@ -442,10 +439,7 @@
                   </div>
                   <h3 align="center" class="temper_text">Prakash Mistry | Ahemdabad</h3>
                   <p class="dololr_text">
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                     cillum dolore eu fugiat nulla pariatur.
+                    Prakash Mistry heads the Dharmik Furniture operations in Ahmedabad, bringing a modern touch to traditional carpentry. Known for his innovative designs and practical solutions, Prakash works closely with clients to deliver furniture that is both functional and aesthetically pleasing. His ability to blend contemporary styles with classic techniques makes him a sought-after craftsman in Ahmedabad. From office furniture to home interiors, Prakash ensures that each project is completed with precision and care.
                   </p>
                </div>
                <div class="col-md-6">
@@ -460,10 +454,7 @@
                   </div>
                   <h3 align="center" class="temper_text">Jiten Mistry | Anand</h3>
                   <p class="dololr_text">
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                     cillum dolore eu fugiat nulla pariatur.
+                    Jiten Mistry is the driving force behind Dharmik Furniture in Anand. With a deep understanding of woodwork and design, Jiten specializes in creating bespoke furniture pieces that reflect the unique tastes of his clients. His commitment to quality and craftsmanship is evident in every project he undertakes. Whether it’s custom cabinetry, elegant sofas, or sturdy dining sets, Jiten’s creations are built to last and designed to impress. His reputation in Anand is a testament to his skill and dedication to his craft.
                   </p>
                </div>
             </div>
