--- a/services.html
+++ b/services.html
@@ -323,22 +323,11 @@
             <div class="row">
                <div class="col-lg-3 col-sm-6">
                   <div class="fooer_logo"><img src="images/footer-logo.png"></div>
-                  <p class="footer_lorem_text">There are many variat
-                     ions of passages of L
-                     orem Ipsum available
-                     , but the majority h
-                     ave suffered altera
-                     tion in some form, by 
+                  <p class="footer_lorem_text">At Dharmik Furniture, we're here to turn your vision into reality. Whether you're looking for custom furniture, stylish home pieces, or expert advice, our dedicated team is ready to assist you every step of the way. Let us help you create the perfect space with our craftsmanship and personalized service.
                   </p>
                </div>
                <div class="col-lg-3 col-sm-6">
-                  <h1 class="customer_text">LET US HELP YOU</h1>
-                  <p class="footer_lorem_text">There are many variat
-                     ions of passages of L
-                     orem Ipsum available
-                     , but the majority h
-                     ave suffered altera
-                     tion in some form, by 
+                  <h1 class="customer_text">Contact us for expert furniture design, repair, and fitting services. We create custom pieces and provide professional repair solutions to meet your needs.
                   </p>
                </div>
                <div class="col-lg-3 col-sm-6">
