--- a/services.html
+++ b/services.html
@@ -342,12 +342,7 @@
                </div>
                <div class="col-lg-3 col-sm-6">
                   <h1 class="customer_text">OUR Design</h1>
-                  <p class="footer_lorem_text">There are many variat
-                     ions of passages of L
-                     orem Ipsum available
-                     , but the majority h
-                     ave suffered altera
-                     tion in some form, by 
+                  <p class="footer_lorem_text">Explore our range of custom-designed furniture solutions for homes, showrooms, and offices. We provide high-quality, tailored pieces that enhance your space
                   </p>
                </div>
             </div>
