--- a/shop.html
+++ b/shop.html
@@ -147,22 +147,12 @@
          <div class="row">
             <div class="col-lg-3 col-sm-6">
                <div class="fooer_logo"><img src="images/footer-logo.png"></div>
-               <p class="footer_lorem_text">There are many variat
-                  ions of passages of L
-                  orem Ipsum available
-                  , but the majority h
-                  ave suffered altera
-                  tion in some form, by
+               <p class="footer_lorem_text">Dharmik Furniture is a family-owned business specializing in custom-made furniture and carpentry services. We deliver quality craftsmanship for homes, offices, and commercial spaces.
                </p>
             </div>
             <div class="col-lg-3 col-sm-6">
                <h1 class="customer_text">LET US HELP YOU</h1>
-               <p class="footer_lorem_text">There are many variat
-                  ions of passages of L
-                  orem Ipsum available
-                  , but the majority h
-                  ave suffered altera
-                  tion in some form, by
+               <p class="footer_lorem_text">Contact us for expert furniture design, repair, and fitting services. We create custom pieces and provide professional repair solutions to meet your needs.
                </p>
             </div>
             <div class="col-lg-3 col-sm-6">
@@ -177,12 +167,7 @@
             </div>
             <div class="col-lg-3 col-sm-6">
                <h1 class="customer_text">OUR Design</h1>
-               <p class="footer_lorem_text">There are many variat
-                  ions of passages of L
-                  orem Ipsum available
-                  , but the majority h
-                  ave suffered altera
-                  tion in some form, by
+               <p class="footer_lorem_text">Explore our range of custom-designed furniture solutions for homes, showrooms, and offices. We provide high-quality, tailored pieces that enhance your space.
                </p>
             </div>
          </div>
